--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aiohttp==3.7.4.post0
-discord.py==1.7.3
-python-dotenv==0.20.0
+discord.py==2.0.1
+python-dotenv==0.21.0
+requests==2.28.1
 udpy==2.0.0
